--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "fb-watchman": "^2.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,13 +37,13 @@
     ]
   },
   "devDependencies": {
-    "@heroicons/react": "^1.0.6",
+    "@heroicons/react": "^2.0.16",
     "autoprefixer": "^10.4.2",
-    "framer-motion": "^6.2.8",
+    "framer-motion": "^10.2.3",
     "postcss": "^8.4.8",
     "react-icons": "^4.3.1",
     "react-scroll": "^1.8.6",
-    "swiper": "^8.0.7",
+    "swiper": "^9.1.0",
     "tailwindcss": "^3.0.23"
   }
 }
